--- a/contactus.html
+++ b/contactus.html
@@ -21,7 +21,7 @@
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Events</a></li>
-                    <li><a class="active" href="#">set up a meeting</a></li>
+                    <li><a class="active" href="file:///D:/vscode/html/proj/contactus.html">set up a meeting</a></li>
                 </ul>
             </nav>
         </header>
